--- a/scadaData/src/Makefile
+++ b/scadaData/src/Makefile
@@ -5,7 +5,7 @@ include make_include
 
 ######################### Directives ###############################
 
-TARGET = $(HDB_APP_BIN)/hydromet_report
+TARGET = $(HDB_APP_BIN)/scadaData
 OBJS = \
 		$(OBJDIR)/scadadata.o \
 		$(OBJDIR)/retrieve_scada_data.o
@@ -17,8 +17,6 @@ clean:
 
 $(TARGET): $(OBJS)
 	$(CC) $(OBJS) $(LIBS) -o $(TARGET)
-	\rm -f $(HDB_APP_BIN)/scadaData
-	ln -s $(APPDIR)/src/scadaData $(HDB_APP_BIN)/scadaData
 
 $(OBJDIR)/retrieve_scada_data.o: retrieve_scada_data.pc
 	proc iname=retrieve_scada_data.pc include=$(HDB_APP_INCLUDE)
