--- a/inflow_24mo/src/Makefile
+++ b/inflow_24mo/src/Makefile
@@ -8,13 +8,12 @@ include make_include
 TARGET = $(HDB_APP_BIN)/inflow_24mo
 OBJS = \
 		$(OBJDIR)/get_monthly_model_data.o \
-		$(OBJDIR)/checkforModelrunid.o \
 		$(OBJDIR)/inflow_24mo.o
 
 main: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) $(OBJS) $(LIBS) -o $(TARGET)
+	$(CC) $(OBJS) $(LIBS) -luc -o $(TARGET)
 
 $(OBJDIR)/get_monthly_model_data.o: \
 					get_monthly_model_data.pc \
@@ -22,13 +21,6 @@ $(OBJDIR)/get_monthly_model_data.o: \
 					$(HDB_APP_LIB)/libutils.a
 	proc iname=get_monthly_model_data.pc include=$(HDB_APP_INCLUDE)
 	$(CC) $(CFLAGS) -c get_monthly_model_data.c -o $@
-
-$(OBJDIR)/checkforModelrunid.o: \
-					../../input_forecast/src/checkforModelrunid.pc \
-					$(HDB_APP_LIB)/libhdb.a \
-					$(HDB_APP_LIB)/libutils.a
-	proc iname=../../input_forecast/src/checkforModelrunid.pc include=$(HDB_APP_INCLUDE)
-	$(CC) $(CFLAGS) -c ../../input_forecast/src/checkforModelrunid.c -o $@
 
 $(OBJDIR)/inflow_24mo.o: \
 					inflow_24mo.c \
@@ -38,4 +30,4 @@ $(OBJDIR)/inflow_24mo.o: \
 	$(CC) $(CFLAGS) -c inflow_24mo.c -o $@
 
 clean:
-	rm -f $(OBJDIR)/get_monthly_model_data.o $(OBJDIR)/checkforModelrunid.o $(OBJDIR)/inflow_24mo.o $(TARGET)
+	rm -f $(OBJS) $(TARGET)
