--- a/input_forecast/src/Makefile.inputForecast
+++ b/input_forecast/src/Makefile.inputForecast
@@ -7,8 +7,6 @@ include make_include
 
 TARGET = $(HDB_APP_BIN)/inputForecast
 OBJS = \
-		$(OBJDIR)/insertModeldata.o \
-		$(OBJDIR)/checkforModelrunid.o \
 		$(OBJDIR)/inputForecast.o
 
 main: $(TARGET)
@@ -16,26 +14,13 @@ main: $(TARGET)
 clean: 
 	rm -f  $(TARGET) $(OBJS)
 
-$(TARGET): $(OBJS)
-	$(CC) $(OBJS) $(LIBS) -o $(TARGET)
-
-$(OBJDIR)/insertModeldata.o: \
-					insertModeldata.pc \
-					$(HDB_APP_LIB)/libhdb.a \
-					$(HDB_APP_LIB)/libutils.a
-	proc iname=insertModeldata.pc include=$(HDB_APP_INCLUDE)
-	$(CC) $(CFLAGS) -c insertModeldata.c -o $@
-
-$(OBJDIR)/checkforModelrunid.o: \
-					checkforModelrunid.pc \
-					$(HDB_APP_LIB)/libhdb.a \
-					$(HDB_APP_LIB)/libutils.a
-	proc iname=checkforModelrunid.pc include=$(HDB_APP_INCLUDE)
-	$(CC) $(CFLAGS) -c checkforModelrunid.c -o $@
+$(TARGET): $(OBJS) \
+           	$(HDB_APP_LIB)/libhdb.a \
+		$(HDB_APP_LIB)/libutils.a
+	$(CC) $(OBJS) $(LIBS) -luc -o $(TARGET)
 
 $(OBJDIR)/inputForecast.o: \
 					inputForecast.c \
 					inputForecast.h \
-					$(HDB_APP_LIB)/libhdb.a \
-					$(HDB_APP_LIB)/libutils.a
+					$(HDB_APP_INCLUDE)/ucutils.h 
 	$(CC) $(CFLAGS) -c inputForecast.c -o $@
