--- a/basins/src/Makefile32
+++ b/basins/src/Makefile32
@@ -1,9 +1,9 @@
-# basins makefile64
+# basins makefile
 # $Id$
 
-include ../../Environ.10
+include ../../Environ
 
-OBJDIR = $(HDB_ENV)/basins/obj64
+OBJDIR = $(HDB_ENV)/basins/obj
 INCLUDES= -I$(HDB_APP_INCLUDE)
 LIBS= $(HDB_LIBS) -lm -ldl
 CFLAGS = -ansi -Wall -g -DANSIPROTO $(INCLUDES)
