--- a/site_data/src/Makefile64.site_datatype
+++ b/site_data/src/Makefile64.site_datatype
@@ -5,19 +5,19 @@ include make_include64
 
 ######################### Directives ###############################
 
-TARGET = $(HDB_APP_BIN)/res_data
+TARGET = $(HDB_APP_BIN)/site_datatype
 OBJS = \
-		$(OBJDIR)/res_data.o
+		$(OBJDIR)/site_datatype.o
 
 main: $(TARGET)
 
-clean: 
-	rm -f  $(TARGET)  $(OBJS)
+clean:
+	rm -f $(TARGET)  $(OBJS)
 
 $(TARGET): $(OBJS)
 	$(CC) $(OBJS) $(LIBS) -o $(TARGET)
 
-$(OBJDIR)/res_data.o: \
-					res_data.pc 
-	proc iname=res_data.pc include=$(HDB_APP_INCLUDE)
-	$(CC) $(CFLAGS) -c res_data.c -o $@
+$(OBJDIR)/site_datatype.o: \
+					site_datatype.pc 
+	proc iname=site_datatype.pc include=$(HDB_APP_INCLUDE)
+	$(CC) $(CFLAGS) -c site_datatype.c -o $@
